# KegDisplay

./: .gitignore  DBSYNC_README.md  DietPiInstall.txt  KegDisplay.service  LICENSE  README.md  baseline_fps.txt  beerexport.csv  current_fps.txt  dbsync_service.service  extract_exact_match_images.py  install_KegDisplay.sh  install_KegDisplay_update.sh  installation_notes.txt  kegdisplay_profile_results.txt  logconfig  page.cfg  passwd  pyproject.toml  render_profile_null_results.txt  render_profile_virtual_results.txt  setup_dbsync.sh  start_dbsync.sh  start_webinterface.sh  taggstaps.service  test_logging.py  webinterface.service
KegDisplay/: __init__.py  application.py  data_manager.py  dbsync.py  dbsync_adapter.py  dbsync_service.py  dependency_container.py  factories.py  log_config.py  page.yaml  page100x16.yaml  page256x64.yaml  passwd  renderer.py  taggstaps.py  test_page.yaml  user_manager.py  webinterface.py
KegDisplay/config/: __init__.py  config_manager.py
KegDisplay/db/: change_tracker.py  createDB.py  database.py  importfromcsv.py  init_sample_data.py
KegDisplay/db/sync/: protocol.py  synchronizer.py
KegDisplay/display/: __init__.py  base.py  factory.py  ssd1322_display.py  virtual_display.py  ws0010_display.py
KegDisplay/templates/: base.html  index.html  taps.html
KegDisplay/tests/: cleanup_temp.py  network_test.py  network_test_readme.md  new_network_test.py  profile_full_app.py  profile_performance.py  profile_render_performance.py  regression_test.py  test_dbsync.py  test_virtual_display.py  test_virtual_display_performance.py
db/: createDB.py
exact_match_images/: exact_match_comparison.html
tests/: test_application.py  test_change_tracker.py  test_config_manager.py  test_data_manager.py  test_database_manager.py  test_factories.py  test_network.py  test_page_example.yaml  test_protocol.py  test_renderer.py  test_renderer_capture.py  test_renderer_exact_match.py  test_renderer_text_elements.py  test_renderer_visual.py  test_synced_database.py  test_synchronizer.py
