[tool.poetry]
name = "KegDisplay"
version = "0.1.0"
description = "Project using tinyDisplay and pyAttention to display beer metadata on small screens for use in a kegerator"
authors = ["dhrone <dhrone@dhrone.xyz>"]
license = "MIT"
packages = [{include = "KegDisplay"}]

[tool.poetry.scripts]
KegDisplay = "KegDisplay.taggstaps:start"

[tool.poetry.dependencies]
python = ">=3.9, <4"
SQLAlchemy = "^2.0.30"
aiosqlite = "^0.20.0"
pyattention = "^0.1.3"
luma-oled = "^3.13.0"
#tinydisplay = "0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
tinydisplay = {path = "../tinyDisplay", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
